--- a/my-app/src/App/App.css
+++ b/my-app/src/App/App.css
@@ -6,11 +6,13 @@
 }
 
 .header {
-  background-color: #f0f0f0; /* צבע רקע עבור ה-header */
+  background-color: #f0f0f0;
+  border-radius: 10px;
 }
 
 .content {
-  background-color: #ccc;
+  background-color: #E6E3E7;
+  text-align: center;
 }
 
 .footer {
