--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,7 +1,15 @@
 html, body {
-  background-color: #ffeead;
   margin: 0;
 }
+
+
+
+h1, h2, h3, h4 {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 600;  /* דק */    letter-spacing: 0.05rem;
+
+}
+
 
 
 /* :root {
